fix: hero section mobile ui

--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000; /* Fallback background color */
+  background-color: white; /* Fallback background color */
 }
 
 /* Slider */
@@ -131,5 +131,18 @@
     margin: 120px 0 120px 0;
     object-fit: cover;
     background-color: #000;
+  }
+  .slider-overlay {
+    position: absolute;
+    top: 120px;
+    left: 0;
+    width: 100%;
+    height: 692px;
+    background: rgba(0, 0, 0, 0.3); /* 40% black overlay */
+    z-index: 0;
+  }
+
+  .hamburger-menu span {
+    background-color: black;
   }
 }
